# ux-writer-assistant-lab

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CSV_BATCH_UPLOAD_IMPLEMENTATION_PLAN.md  FE_TESTING.md  IMPLEMENTATION_PLAN.md  README.md  day6-ingest-kr.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  test_candidates_quick.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 03c032ce2933_add_cancelled_status_to_requeststatus_.py  86b9c9dfbea1_init.py  c6f2ba53b4c1_add_selected_draft_versions.py  cc3ae3a3cd18_add_device_taxonomy_table.py  ec4e19fdeafb_add_needs_revision_status_to_.py  ef45aa7f9f2f_add_source_text_to_requests.py
backend/app/: main.py
backend/app/api/v1/: admin.py  approvals.py  comments.py  drafts.py  ingest.py  requests.py  retrieve.py  translate.py
backend/app/core/: auth.py  io_utils.py  settings.py  state.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/models/: contracts.py
backend/app/services/approvals/: __init__.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: a3ccc4a7d024_create_initial_tables.py  f6332a1dda1e_init.py  fa3d15a6186d_create_all_tables.py
backend/sample_data/: README.md  request_batch_template.csv
backend/scripts/: seed_users.py
backend/tests/: conftest.py  test_admin_devices.py  test_api_health.py  test_api_ingest.py  test_api_retrieve.py  test_api_translate.py  test_taxonomy_normalizer.py  test_workflow_endpoints.py
backend/ux_writer_assistant_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fe-test/: DESIGN_TOKENS.md  (+5 more)
(+145 files in other folders)
